Tue Jun  5 12:44:59 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (r_object): wrong type check for modules.

	* marshal.c (w_object): should not dump anonymous classes/modules.

Mon Jun  4 17:57:56 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.4 released.

Mon Jun  4 04:14:53 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/shellwords.rb: don't destroy argument.

Sat Jun  2 23:23:05 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): should push option modifier at the
	  right place.

Sat Jun  2 23:05:20 2001  Shugo Maeda <shugo@ruby-lang.org>

	* lib/cgi/session.rb: don't use module_function for Class.

Sat Jun  2 00:02:22 2001  Keiju Ishitsuka <keiju@ishitsuka.com>

	* irb messages: fix typos.

Fri Jun  1 17:26:24 2001  K.Kosako  <kosako@sofnec.co.jp>

	* hash.c (replace_i): ignore when key == Qundef.

Fri Jun  1 11:21:04 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: use waitpid on mingw32.

Thu May 31 18:34:57 2001  K.Kosako  <kosako@sofnec.co.jp>

	* file.c (rb_file_s_unlink): should not allow if $SAFE >= 2.

Thu May 31 13:30:25 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* mkconfig.rb, ext/configsub.rb: VERSION -> RUBY_VERSION.

Thu May 31 08:31:22 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* dln.c: #define S_ISDIR if not defined.

Thu May 31 01:28:54 2001  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: default --with-libc_r to `no' until the problem is
	  fixed. (FreeBSD only)

Wed May 30 14:09:00 2001  K.Kosako  <kosako@sofnec.co.jp>

	* object.c (rb_obj_taint): backport from 1.7.

	* object.c (rb_obj_untaint): add frozen status check (backport from 1.7).

Tue May 29 17:24:23 2001  K.Kosako  <kosako@sofnec.co.jp>

	* ruby.c (proc_options): unexpected SecurityError happens when -T4.

Tue May 29 18:46:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): * \1 .. \9 should be
	  backreferences always.
